@@ -12,6 +12,7 @@
 1.9.5 (2012-03-??)
  ! Alpine Quest Map: Multiple bugs fixed (#3484328)
  ~ Improvements in atlas download progress dialog (patch by dvodvo)
+ ~ Windows launcher "Mobile Atlas Creator.exe" increased max heap size to 1GB
 
 1.9.4 (2012-01-29)
  + BeanShell map source: ignoreError=true feature added
